Se creó con Colab

--- a/M1-2_Ejercicios_Visualizacion.ipynb
+++ b/M1-2_Ejercicios_Visualizacion.ipynb
@@ -146,11 +146,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "cantidades_data"
+        "id": "cantidades_data",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8e517272-cffc-4164-c89c-4a08cf203e67"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Datos de producción:\n",
+            "  Material  Producción (kg)\n",
+            "0     TiO₂              245\n",
+            "1      ZnO              180\n",
+            "2    Al₂O₃              320\n",
+            "3     SiO₂              295\n",
+            "4    Fe₂O₃              150\n",
+            "5      CuO              210\n"
+          ]
+        }
+      ],
       "source": [
         "# Crear datos de ejemplo: Producción de diferentes materiales\n",
         "materiales = ['TiO₂', 'ZnO', 'Al₂O₃', 'SiO₂', 'Fe₂O₃', 'CuO']\n",
@@ -279,7 +298,9 @@
       "outputs": [],
       "source": [
         "# TU CÓDIGO AQUÍ\n",
-        "\n"
+        "#my data\n",
+        "metodos = ['Sol-gel', 'CVD', 'Sputtering', 'Hidrotermal', 'Coprecipitación']\n",
+        "tiempo_h = [8, 4, 2, 12, 6]\n"
       ]
     },
     {
